test/libyul/yulSyntaxTests/for_visibility_D.yul
{
	let x := 1 for {} 1 {} { let x := 1 }
}
// ----
// DeclarationError 1395: (28-38): Variable name x already taken in this scope.
